# fastapi-tutorial

./: CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml
.github/: copilot_instructions.md
.github/workflows/: build.yaml  tests.yaml
app/: actions.py  api.py  app.py  cli.py  config.py  dependencies.py  documents.py  exceptions.py  models.py  mongo.py  schemas.py
tests/: conftest.py  test_api.py  test_config.py
